--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- 导航栏 -->
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">OurTeam</div>
@@ -25,6 +26,7 @@
         </div>
     </nav>
 
+    <!-- 首页 Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
             <h1>创新引领未来</h1>
@@ -33,6 +35,7 @@
         </div>
     </section>
 
+    <!-- 关于我们 -->
     <section id="about" class="section">
         <div class="container">
             <h2 class="section-title">关于我们</h2>
@@ -40,7 +43,7 @@
                 <div class="about-text">
                     <h3>我们的故事</h3>
                     <p>我们的团队成立于2020年，由一群热爱技术创新的专业人士组成。我们相信技术的力量可以改变世界，致力于为客户提供最优质的解决方案。</p>
-                    <p>多年来，我们已经服务了多家企业，涵盖金融、教育、医疗等多个领域。我们的目标是成为行业领先的技术服务提供商。</p>
+                    <p>多年来，我们已经服务了超过100家企业，涵盖金融、教育、医疗等多个领域。我们的目标是成为行业领先的技术服务提供商。</p>
                 </div>
                 <div class="about-stats">
                     <div class="stat-item">
@@ -64,19 +67,72 @@
         </div>
     </section>
 
+    <!-- 团队成员 -->
     <section id="team" class="section bg-light">
         <div class="container">
             <h2 class="section-title">核心团队成员</h2>
-            <div class="team-controls">
-                <input id="search" type="search" placeholder="搜索成员或角色...">
-                <select id="filterRole">
-                    <option value="">全部角色</option>
-                </select>
+            <div class="team-grid">
+                <div class="team-card">
+                    <div class="team-image">
+                        <div class="placeholder-avatar">张</div>
+                    </div>
+                    <div class="team-info">
+                        <h3>张伟</h3>
+                        <p class="team-role">创始人 & CEO</p>
+                        <p class="team-desc">拥有10年互联网行业经验，专注于产品战略和团队管理</p>
+                        <div class="social-links">
+                            <a href="#" class="social-link">LinkedIn</a>
+                            <a href="#" class="social-link">GitHub</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="team-card">
+                    <div class="team-image">
+                        <div class="placeholder-avatar">李</div>
+                    </div>
+                    <div class="team-info">
+                        <h3>李娜</h3>
+                        <p class="team-role">技术总监</p>
+                        <p class="team-desc">全栈开发专家，擅长架构设计和团队技术指导</p>
+                        <div class="social-links">
+                            <a href="#" class="social-link">LinkedIn</a>
+                            <a href="#" class="social-link">GitHub</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="team-card">
+                    <div class="team-image">
+                        <div class="placeholder-avatar">王</div>
+                    </div>
+                    <div class="team-info">
+                        <h3>王强</h3>
+                        <p class="team-role">产品经理</p>
+                        <p class="team-desc">用户体验设计专家，专注于产品规划和用户研究</p>
+                        <div class="social-links">
+                            <a href="#" class="social-link">LinkedIn</a>
+                            <a href="#" class="social-link">GitHub</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="team-card">
+                    <div class="team-image">
+                        <div class="placeholder-avatar">赵</div>
+                    </div>
+                    <div class="team-info">
+                        <h3>赵敏</h3>
+                        <p class="team-role">市场总监</p>
+                        <p class="team-desc">品牌营销专家，擅长市场推广和品牌建设</p>
+                        <div class="social-links">
+                            <a href="#" class="social-link">LinkedIn</a>
+                            <a href="#" class="social-link">GitHub</a>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div id="teamGrid" class="team-grid" aria-live="polite"></div>
         </div>
     </section>
 
+    <!-- 服务 -->
     <section id="services" class="section">
         <div class="container">
             <h2 class="section-title">我们的服务</h2>
@@ -96,27 +152,63 @@
                     <h3>云服务</h3>
                     <p>云计算解决方案，助力企业数字化转型和业务升级</p>
                 </div>
+                <div class="service-card">
+                    <div class="service-icon">🎨</div>
+                    <h3>UI/UX设计</h3>
+                    <p>以用户为中心的设计理念，创造出色的视觉体验</p>
+                </div>
+                <div class="service-card">
+                    <div class="service-icon">📊</div>
+                    <h3>数据分析</h3>
+                    <p>专业的数据分析服务，为决策提供科学依据</p>
+                </div>
+                <div class="service-card">
+                    <div class="service-icon">🔒</div>
+                    <h3>网络安全</h3>
+                    <p>全面的安全解决方案，保护您的数据和系统安全</p>
+                </div>
             </div>
         </div>
     </section>
 
+    <!-- 联系我们 -->
     <section id="contact" class="section bg-light">
         <div class="container">
             <h2 class="section-title">联系我们</h2>
             <div class="contact-content">
                 <div class="contact-info">
                     <h3>联系方式</h3>
-                    <div class="contact-item"><span class="contact-icon">📍</span><span>北京市朝阳区科技园区</span></div>
-                    <div class="contact-item"><span class="contact-icon">📧</span><span>contact@ourteam.com</span></div>
-                    <div class="contact-item"><span class="contact-icon">📱</span><span>+86 138 8888 8888</span></div>
-                    <div class="contact-item"><span class="contact-icon">🌐</span><span>www.ourteam.com</span></div>
+                    <div class="contact-item">
+                        <span class="contact-icon">📍</span>
+                        <span>北京市朝阳区科技园区</span>
+                    </div>
+                    <div class="contact-item">
+                        <span class="contact-icon">📧</span>
+                        <span>contact@ourteam.com</span>
+                    </div>
+                    <div class="contact-item">
+                        <span class="contact-icon">📱</span>
+                        <span>+86 138 8888 8888</span>
+                    </div>
+                    <div class="contact-item">
+                        <span class="contact-icon">🌐</span>
+                        <span>www.ourteam.com</span>
+                    </div>
                 </div>
                 <div class="contact-form">
                     <form id="contactForm">
-                        <div class="form-group"><input type="text" placeholder="您的姓名" required></div>
-                        <div class="form-group"><input type="email" placeholder="您的邮箱" required></div>
-                        <div class="form-group"><input type="text" placeholder="主题"></div>
-                        <div class="form-group"><textarea placeholder="您的留言" rows="5" required></textarea></div>
+                        <div class="form-group">
+                            <input type="text" placeholder="您的姓名" required>
+                        </div>
+                        <div class="form-group">
+                            <input type="email" placeholder="您的邮箱" required>
+                        </div>
+                        <div class="form-group">
+                            <input type="text" placeholder="主题">
+                        </div>
+                        <div class="form-group">
+                            <textarea placeholder="您的留言" rows="5" required></textarea>
+                        </div>
                         <button type="submit" class="btn btn-primary btn-full">发送留言</button>
                     </form>
                 </div>
@@ -124,30 +216,37 @@
         </div>
     </section>
 
+    <!-- 页脚 -->
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
-                <div class="footer-section"><h4>关于我们</h4><p>我们是一支充满激情的团队，致力于创造卓越的产品和服务。</p></div>
-                <div class="footer-section"><h4>快速链接</h4><ul><li><a href="#home">首页</a></li><li><a href="#about">关于我们</a></li><li><a href="#team">团队成员</a></li></ul></div>
-                <div class="footer-section"><h4>关注我们</h4><div class="social-icons"><a href="#" class="social-icon">GitHub</a><a href="#" class="social-icon">Twitter</a></div></div>
+                <div class="footer-section">
+                    <h4>关于我们</h4>
+                    <p>我们是一支充满激情的团队，致力于创造卓越的产品和服务。</p>
+                </div>
+                <div class="footer-section">
+                    <h4>快速链接</h4>
+                    <ul>
+                        <li><a href="#home">首页</a></li>
+                        <li><a href="#about">关于我们</a></li>
+                        <li><a href="#team">团队成员</a></li>
+                        <li><a href="#services">服务</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h4>关注我们</h4>
+                    <div class="social-icons">
+                        <a href="#" class="social-icon">GitHub</a>
+                        <a href="#" class="social-icon">Twitter</a>
+                        <a href="#" class="social-icon">LinkedIn</a>
+                    </div>
+                </div>
             </div>
-            <div class="footer-bottom"><p>&copy; 2026 OurTeam. All rights reserved.</p></div>
+            <div class="footer-bottom">
+                <p>&copy; 2024 OurTeam. All rights reserved.</p>
+            </div>
         </div>
     </footer>
-
-    <!-- 成员详情模态框 -->
-    <div id="memberModal" class="modal" aria-hidden="true">
-        <div class="modal-dialog">
-            <button class="modal-close" aria-label="关闭">×</button>
-            <div class="modal-body">
-                <div class="modal-avatar"></div>
-                <h3 class="modal-name"></h3>
-                <p class="modal-role"></p>
-                <p class="modal-bio"></p>
-                <div class="modal-contact"></div>
-            </div>
-        </div>
-    </div>
 
     <script src="script.js"></script>
 </body>
